--- a/application.properties
+++ b/application.properties
@@ -1,12 +1,12 @@
 #Comum
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driverClassName=org.postgresql.Driver
 multipart.maxFileSize=10MB
 
 #local
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=frubbs11
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=frubbs11
 
 
 
@@ -14,6 +14,6 @@ spring.datasource.password=frubbs11
 #spring.datasource.username=qvnfkdkbayapwg
 #spring.datasource.password=VRexJbyIxR-W8UR_YvQvdpc3c3
 #spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
+#spring.jpa.properties.hibernate.hbm2ddl.auto=create
 
 
