--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,18 @@
 
 
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+        <!--
+
+        <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.0-801.jdbc4</version>
         </dependency>
+-->
+
 
         <dependency>
             <groupId>org.imgscalr</groupId>
