--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,9 @@
 #Comum
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.datasource.driverClassName=org.postgresql.Driver
-multipart.maxFileSize=20MB
+multipart.maxFileSize=50MB
+multipart.maxRequestSize=50MB
+multipart.fileSizeThreshold=50MB
 
 #local
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
