--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,8 @@
 #Comum
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.datasource.driverClassName=org.postgresql.Driver
-multipart.maxFileSize=50MB
-multipart.maxRequestSize=50MB
-multipart.fileSizeThreshold=50MB
+spring.http.multipart.max-file-size=50MB
+
 
 #local
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
