--- a/application.properties
+++ b/application.properties
@@ -1,20 +1,34 @@
-#Comum
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.driverClassName=org.postgresql.Driver
-spring.http.multipart.max-file-size=50MB
 
+#Comum
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.http.multipart.max-file-size=50MB
 
 #local
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=frubbs11
 
-
-
+#remoto Free
 #spring.datasource.url=jdbc:postgresql://ec2-107-21-219-235.compute-1.amazonaws.com:5432/d17nleuljn7a5?sslfactory=org.postgresql.ssl.NonValidatingFactory
 #spring.datasource.username=qvnfkdkbayapwg
 #spring.datasource.password=VRexJbyIxR-W8UR_YvQvdpc3c3
-#spring.datasource.driverClassName=org.postgresql.Driver
+
+
+#remoto Pago
+spring.datasource.url=jdbc:postgresql://ec2-54-163-238-11.compute-1.amazonaws.com:5432/ddpbemolao5jo0?sslfactory=org.postgresql.ssl.NonValidatingFactory
+spring.datasource.username=ywveqqzabwusyt
+spring.datasource.password=6s2HhexPEq5uDf7WT3yOCp1KcC
+
+
+
+
+#Atencao aqui!!
 #spring.jpa.properties.hibernate.hbm2ddl.auto=create
 
 
+#Coisas de debug
+#spring.jpa.properties.hibernate.show_sql=true
+#logging.level.org.hibernate.type=TRACE
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.jpa.properties.hibernate.format_sql=true
