--- a/application.properties
+++ b/application.properties
@@ -24,7 +24,7 @@ spring.datasource.password=6s2HhexPEq5uDf7WT3yOCp1KcC
 
 
 #Atencao aqui!!
-#spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.jpa.properties.hibernate.hbm2ddl.auto=create
 
 
 #Coisas de debug
