--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 
 #Comum
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.http.multipart.max-file-size=50MB
 
 #local
@@ -16,15 +16,15 @@ spring.http.multipart.max-file-size=50MB
 
 
 #remoto Pago
-#spring.datasource.url=jdbc:postgresql://ec2-54-163-238-11.compute-1.amazonaws.com:5432/ddpbemolao5jo0?sslfactory=org.postgresql.ssl.NonValidatingFactory
-#spring.datasource.username=ywveqqzabwusyt
-#spring.datasource.password=6s2HhexPEq5uDf7WT3yOCp1KcC
+spring.datasource.url=jdbc:postgresql://ec2-54-163-238-11.compute-1.amazonaws.com:5432/ddpbemolao5jo0?sslfactory=org.postgresql.ssl.NonValidatingFactory
+spring.datasource.username=ywveqqzabwusyt
+spring.datasource.password=6s2HhexPEq5uDf7WT3yOCp1KcC
 
 
 
 
 #Atencao aqui!!
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 
 #Coisas de debug
