tentativa de melhorrar uso de memo

--- a/application.properties
+++ b/application.properties
@@ -6,9 +6,9 @@ spring.http.multipart.max-file-size=50MB
 spring.jackson.serialization.fail-on-empty-beans=false
 
 #local
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=frubbs11
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=frubbs11
 
 #remoto Free
 #spring.datasource.url=jdbc:postgresql://ec2-107-21-219-235.compute-1.amazonaws.com:5432/d17nleuljn7a5?sslfactory=org.postgresql.ssl.NonValidatingFactory
@@ -17,9 +17,9 @@ spring.datasource.password=frubbs11
 
 
 #remoto Pago
-#spring.datasource.url=jdbc:postgresql://ec2-54-163-238-11.compute-1.amazonaws.com:5432/ddpbemolao5jo0?sslfactory=org.postgresql.ssl.NonValidatingFactory
-#spring.datasource.username=ywveqqzabwusyt
-#spring.datasource.password=6s2HhexPEq5uDf7WT3yOCp1KcC
+spring.datasource.url=jdbc:postgresql://ec2-54-163-238-11.compute-1.amazonaws.com:5432/ddpbemolao5jo0?sslfactory=org.postgresql.ssl.NonValidatingFactory
+spring.datasource.username=ywveqqzabwusyt
+spring.datasource.password=6s2HhexPEq5uDf7WT3yOCp1KcC
 
 
 
@@ -29,7 +29,7 @@ spring.datasource.password=frubbs11
 
 
 #Coisas de debug
-spring.jpa.properties.hibernate.show_sql=true
-logging.level.org.hibernate.type=TRACE
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+#logging.level.org.hibernate.type=TRACE
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.jpa.properties.hibernate.format_sql=true
