--- a/application.properties
+++ b/application.properties
@@ -11,15 +11,15 @@ spring.jackson.serialization.fail-on-empty-beans=false
 #spring.datasource.password=frubbs11
 
 #remoto Free
-spring.datasource.url=jdbc:postgresql://ec2-107-21-219-235.compute-1.amazonaws.com:5432/d17nleuljn7a5?sslfactory=org.postgresql.ssl.NonValidatingFactory
-spring.datasource.username=qvnfkdkbayapwg
-spring.datasource.password=VRexJbyIxR-W8UR_YvQvdpc3c3
+#spring.datasource.url=jdbc:postgresql://ec2-107-21-219-235.compute-1.amazonaws.com:5432/d17nleuljn7a5?sslfactory=org.postgresql.ssl.NonValidatingFactory
+#spring.datasource.username=qvnfkdkbayapwg
+#spring.datasource.password=VRexJbyIxR-W8UR_YvQvdpc3c3
 
 
 #remoto Pago
-#spring.datasource.url=jdbc:postgresql://ec2-54-163-238-11.compute-1.amazonaws.com:5432/ddpbemolao5jo0?sslfactory=org.postgresql.ssl.NonValidatingFactory
-#spring.datasource.username=ywveqqzabwusyt
-#spring.datasource.password=6s2HhexPEq5uDf7WT3yOCp1KcC
+spring.datasource.url=jdbc:postgresql://ec2-54-163-238-11.compute-1.amazonaws.com:5432/ddpbemolao5jo0?sslfactory=org.postgresql.ssl.NonValidatingFactory
+spring.datasource.username=ywveqqzabwusyt
+spring.datasource.password=6s2HhexPEq5uDf7WT3yOCp1KcC
 
 
 
