--- a/application.properties
+++ b/application.properties
@@ -6,7 +6,7 @@ spring.http.multipart.max-file-size=50MB
 spring.jackson.serialization.fail-on-empty-beans=false
 
 #local
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=frubbs11
 
